--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 <body>
     <h1>PARROT CARD GAME</h1>
+    <div class="cronometro">0 s</div>
     <ul></ul>
     <script src="java/script.js"></script>
 </body>
